minor refactors and Grady's suggestion no.2,3